Update critical deps to latest to include commons-daemon. Update scripts to reflect JDK change and versions